eksperiment med at bruge docker resource images for at undgå volume mounts

--- a/testgooioidwsrest/docker-compose-wsc.yml
+++ b/testgooioidwsrest/docker-compose-wsc.yml
@@ -12,5 +12,8 @@ services:
        - ./wsc/Caddyfile-wsc:/etc/Caddyfile
        - ./wsc/client/medcom.cer:/certificates/client.cer
        - ./wsc/client/medcom.pem:/certificates/client.pem
-     ports:
-       - "8080:8080"
+#     ports:
+#       - "8080:8080"
+     networks:
+       - gooioidwsrest
+
