--- a/Dockerfile-caddy
+++ b/Dockerfile-caddy
@@ -10,7 +10,7 @@ RUN echo "replace github.com/russellhaering/goxmldsig => github.com/evtr/goxmlds
 RUN echo "replace oioidwsrest => ../oioidwsrest" >> go.mod
 
 # Kitcaddy module source
-COPY caddy-plugin /caddy/
+COPY ./caddy-plugin /caddy/
 
 RUN go test caddy/caddyoioidwsrest
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o /go/bin/caddy .
