logning og trust cert...nu mangler vi bare at lave two-way SSL via proxy i caddy

--- a/testgooioidwsrest/Dockerfile-resources-wsc
+++ b/testgooioidwsrest/Dockerfile-resources-wsc
@@ -4,4 +4,6 @@ ADD  ./wsc/Caddyfile-wsc /wsc/config/Caddyfile-wsc
 ADD  ./wsc/client/medcom.cer /wsc/certificates/client.cer
 ADD  ./wsc/client/medcom.pem /wsc/certificates/client.pem
 
+ADD  ./sts/sts.cer /wsc/trust/sts.cer
+
 VOLUME /wsc
