wsp code and upgraded to caddy 2

--- a/testgooioidwsrest/docker-compose-wsc.yml
+++ b/testgooioidwsrest/docker-compose-wsc.yml
@@ -15,13 +15,11 @@ services:
        - mongo_host=mongo
      volumes_from:
        - wsc-resources:ro
-#     ports:
-#       - "8080:8080"
-#       - "8070:8070"
+     ports:
+       - "8080:8080"
+       - "8070:8070"
      command:
-      - "--log"
-      - "stdout"
-      - "--conf"
+      - "-config"
       - "/wsc/config/Caddyfile-wsc"
      networks:
        - gooioidwsrest
