--- a/Dockerfile-caddy
+++ b/Dockerfile-caddy
@@ -7,7 +7,6 @@ RUN mkdir /caddy
 WORKDIR /caddy
 RUN go mod init caddy
 RUN echo "replace github.com/russellhaering/goxmldsig => github.com/evtr/goxmldsig latest" >> go.mod
-#RUN echo "replace github.com/caddyserver/caddy => github.com/evtr/caddy 1917695d7e6fa7a9245669cdae1633917402bbcd" >> go.mod
 RUN echo "replace oioidwsrest => ../oioidwsrest" >> go.mod
 
 # Kitcaddy module source
@@ -15,9 +14,6 @@ COPY ./caddy-plugin /caddy/
 RUN go test caddy/caddyoioidwsrest
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o /go/bin/caddy .
 
-#FROM abiosoft/caddy:1.0.1
-FROM alpine:3.10
+FROM scratch
 COPY --from=caddybuilder /go/bin/caddy /usr/bin/caddy
-RUN /usr/bin/caddy version
-RUN /usr/bin/caddy list-modules
 ENTRYPOINT ["/usr/bin/caddy", "run"]
