--- a/testgooioidwsrest/docker-compose-wsc.yml
+++ b/testgooioidwsrest/docker-compose-wsc.yml
@@ -8,19 +8,29 @@ services:
      build:
        context: .
        dockerfile: Dockerfile-resources-wsc
-# Wsc
+     environment:
+       - WSC_PORT=8080
    wsc:
      image: kvalitetsit/caddy-gooioidwsrest
      environment:
-       - mongo_host=mongo
+       - WSC_PORT=8080
+       - WSC_MONGO_HOST=mongo
+       - WSC_MONGO_DB=testdbxyz2
+       - WSC_STS_URL=https://sts/sts/service/sts
+       - WSC_CLIENT_CERTIFICATE=/wsc/certificates/client.cer
+       - WSC_CLIENT_KEY=/wsc/certificates/client.pem
+       - WSC_SERVICE_ENDPOINT_HOST=testservicea
+       - WSC_SERVICE_ENDPOINT_PORT=443
+       - WSC_SERVICE_ENDPOINT_CONTEXT=test
+       - WSC_SERVICE_AUDIENCE=urn:kit:testa:servicea
+       - WSC_SESSION_DATA_URL=https://testservicea
      volumes_from:
        - wsc-resources:ro
-     ports:
-       - "8080:8080"
-       - "8070:8070"
+#     ports:
+#       - "8080:8080"
      command:
       - "-config"
-      - "/wsc/config/Caddyfile-wsc"
+#      - "/wsc/config/Caddyfile-wsc"
+      - "/config/Caddyfile-wsc"
      networks:
        - gooioidwsrest
-
