--- a/testgooioidwsrest/Dockerfile-resources-wsc
+++ b/testgooioidwsrest/Dockerfile-resources-wsc
@@ -1,6 +1,5 @@
-FROM bash:4.4
+FROM kvalitetsit/caddy-gooioidwsrest-template
 
-ADD  ./wsc/Caddyfile-wsc /wsc/config/Caddyfile-wsc
 ADD  ./wsc/client/medcom.cer /wsc/certificates/client.cer
 ADD  ./wsc/client/medcom.pem /wsc/certificates/client.pem
 
@@ -11,5 +10,8 @@ ADD  ./sts/sts.cer /wsc/trust/sts.cer
 
 ADD  ./certificates/testservicea/testservicea.cer /wsc/trust/testservicea.cer
 
+ADD  ./wsc/Caddyfile-wsc /wsc/Caddyfile-wsc
+
 VOLUME /wsc
 VOLUME /test
+
