--- a/Dockerfile-caddytemplates
+++ b/Dockerfile-caddytemplates
@@ -1,4 +1,6 @@
 FROM alpine:3.10.3
 RUN apk add --update --no-cache gettext
 COPY ./caddytemplates/caddyfiletemplates/Caddyfile-wsc /caddyfiletemplates/Caddyfile-wsc
+COPY ./caddytemplates/caddyfiletemplates/Caddyfile-wsp /caddyfiletemplates/Caddyfile-wsp
+COPY ./caddytemplates/caddyfiletemplates/Caddyfile-wsc-nosessiondata  /caddyfiletemplates/Caddyfile-wsc-nosessiondata
 ENTRYPOINT envsubst < ${TEMPLATE_FILE} > ${CADDYFILE}
