--- a/testgooioidwsrest/Dockerfile-resources-wsc
+++ b/testgooioidwsrest/Dockerfile-resources-wsc
@@ -1,4 +1,4 @@
-FROM kvalitetsit/caddy-gooioidwsrest-template
+FROM kvalitetsit/caddy-gooioidwsrest-templates
 
 ADD  ./wsc/client/medcom.cer /wsc/certificates/client.cer
 ADD  ./wsc/client/medcom.pem /wsc/certificates/client.pem
@@ -7,10 +7,11 @@ ADD  ./wsc/client/medcom.cer /test/cert.cer
 ADD  ./wsc/client/medcom.pem /test/cert.pem
 
 ADD  ./sts/sts.cer /wsc/trust/sts.cer
-
+ADD  ./wsp/testserviceaa-ssl.crt /wsc/trust/testserviceaa.cer
 ADD  ./certificates/testservicea/testservicea.cer /wsc/trust/testservicea.cer
 
 ADD  ./wsc/Caddyfile-wsc /wsc/Caddyfile-wsc
+ADD  ./wsc/Caddyfile-wsc-for-wsp /wsc/Caddyfile-wsc-for-wsp
 
 VOLUME /wsc
 VOLUME /test
