--- a/testgooioidwsrest/docker-compose-wsp.yml
+++ b/testgooioidwsrest/docker-compose-wsp.yml
@@ -24,7 +24,7 @@ services:
      volumes:
        - "./config_out:/config"
    testserviceaa:
-     image: kvalitetsit/gooioidwsrest
+     image: kvalitetsit/gooioidwsrest:latest
      volumes_from:
        - wsp-resources:ro
 #     ports:
