--- a/testgooioidwsrest/docker-compose.yml
+++ b/testgooioidwsrest/docker-compose.yml
@@ -16,7 +16,7 @@ services:
        dockerfile: Dockerfile-resources-servicea
 # Sts
    sts:
-     image: kitdocker.kvalitetsit.dk/kvalitetsit/sts-frontend:543492665993a4323f1d4fc94d266278d58764fb
+     image: kvalitetsit/sts-frontend:1.0.0
      environment:
        - SERVER_NAME=sts
        - STS_HOST=sts-backend
@@ -25,7 +25,7 @@ services:
      networks:
        - gooioidwsrest
    sts-backend:
-     image: kitdocker.kvalitetsit.dk/kvalitetsit/sts:543492665993a4323f1d4fc94d266278d58764fb
+     image: kvalitetsit/sts:1.0.0
      environment:
        - LOG_LEVEL=DEBUG
        - STS_ISSUER=stsa
